--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@
 @import url(./blocks/card-form/__save/_disabled/card-form__save_disabled.css);
 @import url(./blocks/card-form/__title/_type/card-form__title_type_avatar.css);
 @import url(./blocks/card-form/__title/_type/card-form__title_type_delete-card.css);
+@import url(./blocks/card-form/__img/card-form__img.css);
+@import url(./blocks/card-form/__info-title/card-form__info-title.css);
 
 @import url(./blocks/authorization-form/authorization-form.css);
 @import url(./blocks/authorization-form/__input/authorization-form__input.css);
